fix spacing, move inline declaration of css

--- a/src/components/UserProfile/user.css
+++ b/src/components/UserProfile/user.css
@@ -9,7 +9,7 @@
     width: 50%;
   }
 
-.cards {
+cards {
     padding: 50px;
     margin-bottom: 100px;
 }
@@ -18,4 +18,18 @@
     text-align: center;
     margin: auto;
     width: 50%;
+}
+
+.center {
+    width: 900px;
+    background: white;
+    marginTop: 20px;
+}
+
+p {
+    text-align: left;
+}
+
+Button {
+    float: right;
 }
